Fix dark mode section overflow on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,14 @@
     src: url(../fonts/sriracha-regular-webfont.woff)
 }
 
+
+@media only screen and (max-width: 600px) {
+    /* For mobile phones: */
+
+    #dark-mode-div {
+        top : 12vh;
+    }
+  }
 /* * {
     outline: dashed red;
 } */
@@ -26,6 +34,7 @@
     --book-height: clamp(200px, calc(8rem + 10vh), 300px);
     --book-width: clamp(220px, calc(8rem + 10vw), 300px);
     --book-padding: 1.2rem;
+    --trash-bin-image: url('../images/delete-white.png')
 }
 
 :root.dark {
@@ -37,6 +46,7 @@
     --color-text-book: black;
     --color-text-header: rgb(241, 230, 230);
     --color-form-fields: var(--color-medium);
+    --trash-bin-image: url('../images/delete.png')
 }
 
 body {
@@ -86,7 +96,6 @@ body {
     align-self: end;
     padding-left: 5px;
 }
-
 
 
 .switch {
@@ -169,6 +178,22 @@ main {
     border-color: var(--color-contrast);
     box-shadow: 4px 4px 6px grey;
     font-size: 1.4rem;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.trash-bin {
+    background-image: var(--trash-bin-image);
+    background-repeat: no-repeat;
+    height: 24px;
+    width: 24px;
+    align-self: flex-end;
+}
+
+.trash-bin:hover {
+    cursor: pointer;
+    animation: shake 0.5s;
 }
 
 .book>table,
@@ -260,7 +285,11 @@ body #pop-up {
 
 #pop-up input {
     background-color: var(--color-form-fields);
-    border: solid 1px var(--color-text-header);   
+    border: solid 1px var(--color-text-header);
+}
+
+#pop-up input[type="text"] {
+    width: 90%;
 }
 
 #pop-up input:invalid:not(:placeholder-shown) {
@@ -272,7 +301,7 @@ body #pop-up {
     padding-left: 0.3rem;
     padding-right: 0.5rem;
     font-size: 1.2rem;
-    color: var(--color-form-fields-text)
+    color: var(--color-form-fields-text);
 }
 
 #pop-up input[type="checkbox"] {
@@ -425,3 +454,17 @@ footer {
         opacity: 0.5;
     }
 }
+
+@keyframes shake {
+    0% { transform: translate(1px) rotate(0deg); }
+    10% { transform: translate(-1px) rotate(-1deg); }
+    20% { transform: translate(-3px) rotate(1deg); }
+    30% { transform: translate(3px) rotate(0deg); }
+    40% { transform: translate(1px) rotate(1deg); }
+    50% { transform: translate(-1px) rotate(-1deg); }
+    60% { transform: translate(-3px) rotate(0deg); }
+    70% { transform: translate(3px) rotate(-1deg); }
+    80% { transform: translate(-1px) rotate(1deg); }
+    90% { transform: translate(1px) rotate(0deg); }
+    100% { transform: translate(1px) rotate(-1deg); }
+  }
